<resources>
    <string name="app_name">Food-Recipes-Application</string>
    <string name="apiKey">aeb625c3f68d4365b5a01116e78a3663</string>
 <!--<string name="apiKey">b2f256d3075f434dba8189d2309740a0</string> -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="login_failed">"Login failed!"</string>
    <string name="guest_mode">Guest Mode</string>
    <string name="app_title">Foodtopia</string>
    <string name="username">Username</string>
    <string name="backgroundSignUp">Background Image for Sign Up Activity</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account"><u>Already Have An Account</u></string>
    <string name="sign_up_now"><u>Sign Up Now</u></string>
    <string name="not_a_user_yet_question">Not a user yet?</string>
    <string name="go_back"><![CDATA[<]]></string>
    <string name="information_icon_letter">i</string>
    <string name="food_recipe">Food Recipe</string>
    <string name="welcome">Welcome to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">Leanback infoActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
</resources>